@@ -246,6 +246,7 @@
             "id": "0f0e9d67-c185-4d21-a6f4-4673ed561ec8",
             "timestamp": "2017-05-09T15:04:05.999Z",
             "log": {
+                "level": "custom log level",
                 "message": "Cannot read property 'baz' of undefined"
             }
         }
