@@ -449,7 +449,8 @@
                 "grouping_key": "d6b3f958dfea98dc9ed2b57d5f0c48bb",
                 "id": "0f0e9d67-c185-4d21-a6f4-4673ed561ec8",
                 "log": {
-                    "message": "Cannot read property 'baz' of undefined"
+                    "message": "Cannot read property 'baz' of undefined",
+                    "level": "custom log level"
                 }
             }
         },
